# irc-dll-template-rs

./: .gitmodules  Cargo.toml  LICENSE  LICENSE.md  README.md  debug.mrc  package-lock.json
.github/workflows/: build.yml
examples/: example.mrc
src/: lib.rs
